--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#4E0D3A</color>
     <color name="colorAccent">#720D5D</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
