--- a/app/src/main/res/layout/activity_tutorial.xml
+++ b/app/src/main/res/layout/activity_tutorial.xml
@@ -4,6 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/tutorial_pager"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:layout_gravity="bottom"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:paddingStart="60dp"
+        android:paddingLeft="60dp"
+        android:paddingTop="60dp"
+        android:paddingEnd="60dp"
+        android:paddingRight="60dp"
+        android:paddingBottom="60dp"
+        app:layout_constraintBottom_toTopOf="@id/start_using_app_button"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/start_using_app_button"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
