--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="done_green">#2ecc71</color>
+    <color name="light_gray">#D3D3D3</color>
 </resources>
