--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,6 +13,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="@dimen/divider_margin"
+            app:srcCompat="@drawable/pd_dribble_circle_cropped" />
+
         <LinearLayout
             android:id="@+id/user_ad_id_container"
             android:layout_width="match_parent"
