--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5D1049</color>
-    <color name="colorPrimaryDark">#4E0D3A</color>
-    <color name="colorAccent">#720D5D</color>
+    <color name="colorPrimary">#fafafa</color>
+    <color name="colorPrimaryDark">#c7c7c7</color>
+    <color name="colorPrimaryLight">#ffffff</color>
+
+    <color name="colorAccent">#00838f</color>
+    <color name="colorAccentDark">#005662</color>
+    <color name="colorAccentLight">#4fb3bf</color>
+
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="done_green">#2ecc71</color>
