Last tab still not showing up

--- a/app/src/main/res/layout/fragment_app_install.xml
+++ b/app/src/main/res/layout/fragment_app_install.xml
@@ -29,10 +29,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.viewpager.widget.ViewPager
+            <com.weichengcao.privadroid.ui.EventsPagers.WrapContentViewPager
                 android:id="@+id/app_install_view_pager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:clipToPadding="false"
                 android:overScrollMode="never"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,6 @@
                 android:id="@+id/app_install_tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:elevation="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
