--- a/app/src/main/res/layout/card_adapter.xml
+++ b/app/src/main/res/layout/card_adapter.xml
@@ -29,10 +29,11 @@
             android:orientation="vertical"
             android:padding="24dp">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/tutorial_card_button"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
+                android:textColor="@color/colorAccentContrast"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/set_up"
