--- a/app/src/main/res/layout/fragment_app_install.xml
+++ b/app/src/main/res/layout/fragment_app_install.xml
@@ -1,73 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_install_screen_title">
 
-        <TextView
-            android:id="@+id/app_install_screen_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="4dp"
-            android:gravity="center_vertical"
-            android:paddingStart="@dimen/profile_banner_left_right_padding"
-            android:paddingTop="@dimen/divider_margin"
-            android:paddingEnd="@dimen/profile_banner_left_right_padding"
-            android:paddingBottom="@dimen/divider_margin"
-            android:text="@string/app_install_screen_title"
-            android:textColor="@color/black"
-            android:textSize="@dimen/screen_title_size"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.weichengcao.privadroid.ui.EventsPagers.WrapContentViewPager
-                android:id="@+id/app_install_view_pager"
+            <fragment
+                android:id="@+id/app_install_surveyed_fragment"
+                android:name="com.weichengcao.privadroid.ui.SurveyedFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:overScrollMode="never"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/app_install_tabs" />
+                android:layout_marginTop="@dimen/material_card_spacing"
+                android:orientation="vertical">
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/app_install_tabs"
+            </fragment>
+
+            <fragment
+                android:id="@+id/app_install_unsurveyed_fragment"
+                android:name="com.weichengcao.privadroid.ui.UnsurveyedFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_marginTop="@dimen/material_card_spacing"
+                android:orientation="vertical">
 
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/app_install_tab_surveyed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/surveyed" />
+            </fragment>
+        </LinearLayout>
+    </ScrollView>
 
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/app_install_tab_unsurveyed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unsurveyed" />
-
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/app_install_tab_summary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/summary" />
-
-            </com.google.android.material.tabs.TabLayout>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </LinearLayout>
-</ScrollView>
+    <TextView
+        android:id="@+id/app_install_screen_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:gravity="center_vertical"
+        android:paddingStart="@dimen/profile_banner_left_right_padding"
+        android:paddingTop="@dimen/divider_margin"
+        android:paddingEnd="@dimen/profile_banner_left_right_padding"
+        android:paddingBottom="@dimen/divider_margin"
+        android:text="@string/app_install_screen_title"
+        android:textColor="@color/black"
+        android:textSize="@dimen/screen_title_size"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
