--- a/app/src/main/res/layout/fragment_app_uninstall.xml
+++ b/app/src/main/res/layout/fragment_app_uninstall.xml
@@ -1,51 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_uninstall_screen_title">
 
-        <TextView
-            android:id="@+id/app_uninstall_screen_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:elevation="4dp"
-            android:gravity="center_vertical"
-            android:paddingStart="@dimen/profile_banner_left_right_padding"
-            android:paddingTop="@dimen/divider_margin"
-            android:paddingEnd="@dimen/profile_banner_left_right_padding"
-            android:paddingBottom="@dimen/divider_margin"
-            android:text="@string/app_uninstall_screen_title"
-            android:textColor="@color/black"
-            android:textSize="@dimen/screen_title_size"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/app_uninstall_tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="4dp">
+        </LinearLayout>
+    </ScrollView>
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/surveyed" />
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/unsurveyed" />
-
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/summary" />
-
-        </com.google.android.material.tabs.TabLayout>
-
-    </LinearLayout>
-</ScrollView>
+    <TextView
+        android:id="@+id/app_uninstall_screen_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:gravity="center_vertical"
+        android:paddingStart="@dimen/profile_banner_left_right_padding"
+        android:paddingTop="@dimen/divider_margin"
+        android:paddingEnd="@dimen/profile_banner_left_right_padding"
+        android:paddingBottom="@dimen/divider_margin"
+        android:text="@string/app_uninstall_screen_title"
+        android:textColor="@color/black"
+        android:textSize="@dimen/screen_title_size"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
