Added surveyed and unsurveyed cards

--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -7,8 +7,9 @@
     <FrameLayout
         android:id="@+id/main_screen_content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/skip_bnv_height">
 
     </FrameLayout>
 
