--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,8 @@
 
     <dimen name="material_card_spacing" tools:override="true">10dp</dimen>
 
-    <dimen name="surveyed_unsurveyed_card_title_size">14sp</dimen>
-    <dimen name="surveyed_unsurveyed_card_count_size">10sp</dimen>
+    <dimen name="surveyed_unsurveyed_card_title_size">20sp</dimen>
+    <dimen name="surveyed_unsurveyed_card_description_size">12sp</dimen>
+
+    <dimen name="skip_bnv_height">66dp</dimen>
 </resources>
