Query app install and uninstall and display text in cards

--- a/app/src/main/res/layout/fragment_unsurveyed.xml
+++ b/app/src/main/res/layout/fragment_unsurveyed.xml
@@ -42,7 +42,7 @@
                 android:paddingStart="27dp"
                 android:paddingTop="10dp"
                 android:paddingEnd="20dp"
-                android:text="@string/unsurveyed"
+                android:text="@string/empty"
                 android:textSize="@dimen/surveyed_unsurveyed_card_description_size" />
 
             <com.google.android.material.button.MaterialButton
