Added activity surveyed and unsurveyed activity top bar

--- a/app/src/main/res/layout/activity_unsurveyed_events.xml
+++ b/app/src/main/res/layout/activity_unsurveyed_events.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:id="@+id/activity_unsurveyed_events_head_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/activity_unsurveyed_events_back_button"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
+
+        <TextView
+            android:id="@+id/app_install_screen_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/profile_banner_left_right_padding"
+            android:paddingTop="@dimen/divider_margin"
+            android:paddingEnd="@dimen/profile_banner_left_right_padding"
+            android:paddingBottom="@dimen/divider_margin"
+            android:text="@string/unsurveyed_events"
+            android:textColor="@color/black"
+            android:textSize="@dimen/screen_title_size"
+            android:textStyle="bold" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
